# ndreg-old

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmarks.md  comparison.ipynb  demo-ndreg-2.ipynb  landmarks.py  maskPipelineExample.ipynb  ndreg.py  ndregExample.py  ndreg_install_centos6.7.sh  ramonifyExample.py  requirements.txt  setup.py.in
dat/checker/: I0.tif  I1.tif
doc/: 152DLS_tail_Registration.ipynb  154DLS_tail_Registration.ipynb  155DLS_tail_Registration.ipynb  2dRegistration.ipynb  3D_AutA_Registration.ipynb  3D_CLARITY_RegistrationAndAnalysis.ipynb  3D_STP_RegistrationTest.ipynb  3D_Talia_Registration.ipynb  advancedRegistration.ipynb  basicRegistration.ipynb  branch_Registration.ipynb  forBrian.ipynb  introduction.ipynb  io.ipynb  ramonifyARA.py  s275_Registration.ipynb  s278_Registration.ipynb  s3617_to_ara3.ipynb  sparse.ipynb  videoStabilization.ipynb
docker/: Dockerfile.old
metamorphosis/dat/squareBig/: I0.hdr  I0.img  I0.tif  I1.img  I1.tif
metamorphosis/ref/: pseudocode.tex
metamorphosis/src/: CMakeLists.txt  README.md  README.md~  itkDebug.h  itkMetamorphosisImageRegistrationMethodv4.h  itkMetamorphosisImageRegistrationMethodv4.hxx  itkSumImageFilter.h  itkSumImageFilter.hxx  itkTimeVaryingVelocityFieldSemiLagrangianTransform.h  metamorphosis.cxx  metamorphosis.cxx~
ndreg/: itkMetamorphosisImageRegistrationMethodv4.h  itkMetamorphosisImageRegistrationMethodv4.hxx  itkTimeVaryingVelocityFieldSemiLagrangianTransform.hxx  metamorphosis.cxx  ndreg-old.py  ndreg.py
ndreg-jupyter/: Dockerfile  README.md
ndreg-old/: CMakeLists.txt
notebooks/: 2018-12-05_mouselight_neurons_level1.html  2018-12-05_mouselight_neurons_level2.html  2018-12-05_mouselight_neurons_level3.html  2018-12-05_mouselight_neurons_level4.html  2018-12-08_mouselight_neurons_level1.html  2018-12-08_mouselight_neurons_level2.html  2018-12-08_mouselight_neurons_level3.html  2018-12-08_mouselight_neurons_level5.html  Clarity Analysis Pipeline.ipynb  demo-ndreg-2.ipynb
results/clarityMultipleScales/: clarityMultiscale.tex
results/clarityMultiscale/: clarityMultiscaleResults.tex
results/clarityPipeline/: Cocaine174.csv  Cocaine175.csv  Cocaine178.csv  Control181.csv  Control182.csv  Control189.csv  Control239.csv  Control258.csv  Fear187.csv  Fear197.csv  Fear199.csv  clarityPipeline.tex  clarityPipelineJacobian.tex  meanDists.csv
tests/: DisplayingTestResults.ipynb  in.img  ref.hdr  ref.img
tools/: getAnno.m  getAnnoSize.m  getImage.m  getImageSize.m  imgRead.m  imgWrite.m  putAnno.m  putImage.m  setup.m
